--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -2,6 +2,18 @@
 
 没时间了，自己准备的并不充分，先从所有方向的概念性问题着手，在自己一步一步的动手去看东西
 
+自我介绍：
+
+
+
+项目经历
+
+技术难点：
+
+- 区块链节点动态性较高，需实时调度部署/监测分布式集群中节点
+- 区块链节点是离散的分布式系统，无中心服务节点，子集内节点的工作负载压力容易过载
+- 区块链是P2P分布式存储系统，交易入链需要集群中节点间达成共识，交易的并发入链的吞吐量有较大限制，需要优化分布式共识协议，改进共识协议中对交易进行排序的过程
+
 # Java 基础
 
 Java 基础可能会问到的问题：
@@ -70,7 +82,7 @@ JVM 可能会问到的问题：
 
 * 单例模式
 * 策略模式
-* 
+* 装饰器模式：CucurrentHashMap
 
 # RPC
 
