--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -1,95 +1,293 @@
-# 0 策略
+# 0 自我介绍
 
-没时间了，自己准备的并不充分，先从所有方向的概念性问题着手，在自己一步一步的动手去看东西
+尊敬的面试官您好，我叫叶厚豪。研究生二年级就读于复旦大学计算机科学系。
 
-自我介绍：
+我的主语言是java，对java并发编程，jvm虚拟机、MySQL等技术一定的了解。
 
 
 
-项目经历
+## 1 日立
 
-技术难点：
+在研究生一年级时曾在日本的日立公司远程实习过一段时间，主要参与的部分是开发一款log process的区块链消息的日志处理的中间件
 
-- 区块链节点动态性较高，需实时调度部署/监测分布式集群中节点
-- 区块链节点是离散的分布式系统，无中心服务节点，子集内节点的工作负载压力容易过载
-- 区块链是P2P分布式存储系统，交易入链需要集群中节点间达成共识，交易的并发入链的吞吐量有较大限制，需要优化分布式共识协议，改进共识协议中对交易进行排序的过程
+日立项目的整个背景是
 
-# Java 基础
+1. 由于区块链是一个分布式去中心化的数据库文件系统，他的消息需要在去中心的分布式环境中，多个区块链节点对消息的入链顺序达到一致性，导致他的系统在同步消息与验证消息的合法性的周期特别长，系统的吞吐量特别低
+2. 但与此同时，来自数据中心和分布在边缘端的服务节点会产生大量的系统日志，需要同步到区块链中
+3. 即日志的提供方、以及日志的处理方，他们的生成数据和存储数据的速度不匹配，存在一个差值
+4. 因此如何成功的缓解短期内，业务高峰期大量的日志到达系统时，对系统造成的过载的压力，是需要亟需解决的问题
+5. 我们的任务是为数据中心设计一款缓冲日志数据并处理日志，帮助区块链系统缓冲业务高峰期产生的大量日志，再写入到区块链的消息差速器成为了一个比较重要的关键问题
+6. 考虑到消息队列的解耦合、消峰、和异步的特点，以及它可以为区块链系统带来的缓冲作用，log process区块链中间件采用了rocket mq消息队列中间件
 
-Java 基础可能会问到的问题：
+
+
+项目的技术路线：
+
+1. 分布在日本的各个日立的数据中心作为消息的生产者，把消息上传到消息队列中
+    1. 提及消息队列的解耦、消峰、异步的作用
+2. log process区块链中间件，作为消息的消费者，从消息队列中拿到日志，并完成对日志的集中处理与合并
+    1. 提及Java 线程
+    2. 定时提交任务
+3. 最终log process通过gRPC完成对远端的区块链微服务的调用
+    1. 提起gRPC无视平台性
+
+
+
+自己的工作：
+
+1. 自己在项目组中担任的角色是使用gRPC完成调用云上区块链微服务的部分，
+    1. 熟悉grpc的面试经常问道的问题
+    2. 动态代理
+    3. 网络传输
+    4. 序列化
+2. 同时，完成对区块链系统内的内部源码的优化，压缩日志的存储大小，开发出区块链系统轻结点部件，将系统日志成功的压缩到了原来的20%的大小
+    1. 自己需要看一下一致性hash会问到的问题
+    2. Merkel tree & Merkel path
+
+
+
+自己在项目中的收获：
+
+1. 自己在开发项目中熟悉了两个中间件的使用和系统设计
+2. 自己在项目中学会了Java 多线程部分的知识，自己开始体会到并发系统带来的系统优势和性能的提升
+3. 自己在项目中学会了hash技术带来的项目的优势，可以保障消息的一致性存储，并可以利用hash完成对消息的溯源工作
+
+
+
+除了技术以外的收获是
+
+1. 自己做为项目的开发人员，关注的重点不单单仅仅局限于技术难点，还要学会如何沟通，明确业务部分关注到的重点的需求
+2. 开发过程中需要有一个明确的接口规范，系统的前期设计工作要做好
+3. 
+
+
+
+---
+
+
+
+## 2 大宗
+
+自己在研究生二年级参与到了实验室重点项目的研发中，参与的是国家科技部纵向项目《大宗商品市场的监管与规范》
+
+整个项目的背景是
+
+1. 区块链作为一个分布式去中心的一致性文件系统，它可以保证在多个分布式节点上的消息存储一致性、合法性、可溯源性
+2. 为了规范分布在全国的大宗商品市场的交易平台进行交易的合法性（防止大宗商品的买空、做空等各种非法交易行为），需要区块链为各个数据中心提供可信的信息历史存证，这些消息同时具备合法性和可追溯性
+3. 项目的关键问题在于如何向分布在全国各地的大宗商品交易平台提供可靠的区块链服务，完成区块链节点的动态调度与请求的负载均衡工作，
+4. 除此之外，还需要对各个交易中心的区块链节点进行监控，实时的处理与预警资源的缺乏
+
+
+
+关键问题和：
+
+1. 区块链作为一个分布式一致性数据库，分布在各地的节点需要完成对历史交易的顺序的共识，这一个历史信息的同步周期需要较长的时间，一次一笔存证需要等待消息入链成功之后，才能算作交易成功
+    1. 使用Java线程池，将每个查询请求分派到不同的线程中，使用多个线程同时的查询区块链数据
+        1. 线程池的相关问题
+        2. 使用多少个线程合理
+2. 区块链节点动态性较高，需实时调度部署/监测分布式集群中节点
+    1. 需要自己熟悉k8s的调度一个节点的过程
+3. 区块链节点是离散的分布式系统，无中心服务节点，子集内节点的工作负载压力容易过载
+    1. 需要了解怎么通过grpc然后与k8s完成系统的对接工作
+    2. 怎么通过grpc完成负载均衡的做法
+4. 区块链是P2P分布式存储系统，交易入链需要集群中节点间达成共识，交易的并发入链的吞吐量有较大限制，需要优化分布式共识协议，改进共识协议中对交易进行排序的过程
+    1. 需要自己了解mvcc的原理
+    2. 需要讲清楚tarjan算法
+
+
+
+
+
+自己的工作：
+
+1. 自己在项目组中担任的角色是使用gRPC完成调用云上区块链微服务的部分，
+    1. 熟悉grpc的面试经常问道的问题
+    2. 动态代理
+    3. 网络传输
+    4. 序列化
+2. 使用线程池完成对请求的调用的负载均衡工作
+3. 使用kubernetes完成对区块链服务的部署工作
+
+
+
+自己在项目中的收获：
+
+1. 自己在开发项目中熟悉了两个中间件的使用和系统设计
+2. 自己在项目中学会了Java 多线程部分的知识，自己开始体会到并发系统带来的系统优势和性能的提升
+3. 自己在项目中学会了hash技术带来的项目的优势，可以保障消息的一致性存储，并可以利用hash完成对消息的溯源工作
+
+
+
+除了技术以外的收获是
+
+1. 要熟悉业务需求，提前确定好技术的解决方案
+2. 开发过程中需要有一个明确的接口规范，系统的前期设计工作要做好
+3. 
+
+
+
+## 3 项目问题
+
+---
+
+1. 项目中的难点、模块
+2. 项目的数据量以及QPS能达到多少
+
+
+
+---
+
+# Java 会问到的问题
+
+## Java：
+
+* ArrayList和LinkedList特点及各自应用场景
+
+* String的intern方法有什么用？
+
+    * StringBffer 和 StringBuilder有什么区别
+
+* HashMap，Hashtable ，LinkedHashMap，TreeMap的区别
 
 * HashMap线程不安全，那么多个线程访问它最有可能带来什么错误？
+
 * HashMap
     * hash算法是什么
+        * 什么是一致性hash算法？
+        * Merkel tree & Merkel path
     * 底层数据结构是什么？
     * 查询/删除的时间复杂度？
     * 线程安全吗？不安全用什么替代？
+    * 一个非常多元素的HashMap，rehash非常耗时，所以需要在它rehash过程中还能get、put，你有什么解决方案或者思路？
+    
+* 哈希和红黑树的特点和应用场景
+
+    * 哈希：查找插入删除在没有哈希碰撞的情况下都是O(1)，性能高，以空间换时间
+
+    * 红黑树：BST树 -> 更新操作导致树左右不平衡，影响性能 -> 引入AVL树 -> 维护成本高 -> 引入红黑树
+        红黑树O(lgN)的查找性能
+
+    * 红黑树的五个性质保证左右高度不超过2倍
+
+        1）每个结点要么是红的，要么是黑的。
+        2）根结点是黑的。
+        3）每个叶结点（叶结点即指树尾端NIL指针或NULL结点）是黑的。
+        4）如果一个结点是红的，那么它的俩个儿子都是黑的。
+        5）对于任一结点而言，其到叶结点树尾端NIL指针的每一条路径都包含相同数目的黑结点。
 
 
 
----
+## JVM：
+
+1. 什么时候OOM？
+2. GC了解吗？JVM调优有没有遇到过？
+3. GC Root有哪些
+4. CMS和G1收集器
+    1. CMS怎么处理垃圾碎片的？
+    2. G1收集器有没有Full GC？
+5. jvm栈
+    1. JVM里面会有几个栈？-几个线程就有几个栈，栈是线程私有的
+    2. 什么时间入栈，什么时间出栈？-方法调用入栈，方法返回出栈
+    3. 除了返回还有什么情况会出栈？-抛出异常
 
 
 
-# JVM 调优
+## Java 并发
 
-JVM 可能会问到的问题：
-
-* GC了解吗？JVM调优有没有遇到过？
-
-
-
----
-
-
-
-# * 消息队列
-
-想一想消息队列怎么优化大宗商品市场的业务场景？
-
-# 多线程
-
-多线程会问到的知识点：
-
-* 线程这边在操作系统怎么体现的，解决什么问题？
-* 单核CPU线程解决问题，多核CPU中解决什么问题？
-* 多线程是如何进行通信的？
-* 进程和线程区别？
-* 线程的中断？
-* CAS
-* volatile
-* synchronized 的底层实现 
+1. 多线程会问到的知识点：
+2. 线程这边在操作系统怎么体现的，解决什么问题？
+3. 单核CPU线程解决问题，多核CPU中解决什么问题？
+4. 多线程是如何进行通信的？
+5. 进程和线程区别？
+6. 线程的中断？
+7. CAS
+    1. CAS的三个问题及解决方案
+8. volatile
+    1. singleton变量是需要被volatile修饰的，具体过程：
+        1. 先判断singleton变量是不是等于null，然后synchronized锁住类锁，然后接着判断singleton变量是不是等于null，等于null则new出对象，
+        2. 但是new出对象是需要三个步骤的
+            第一，为对象分配内存
+            第二，对象初始化
+            第三，对象引用指向第一步分配好的内存
+        3. 那其实不加入volatile关键字修饰的话，第二步和第三步是可以重排序的，可以乱序执行
+        4. 那如果这样第一个线程过来时只执行到第二步，就是说还没有初始化对象就已经引用上了，第二个线程再过来时，因为已经有了引用，所以直接返回对象，但对象还没有初始化，所以用起来会报错
+    2. 从硬件架构来说，CPU为什么会重排序
+        答：前面指令如果依赖的数据发生缓存缺失，那么需要去内存磁盘读取数据，这个过程很耗时，如果不乱序执行的话，后面所有的指令都会被block住，这样CPU的吞吐量上不去，所有会有乱序执行机制，让后面没有数据依赖关系的指令可以不用等前面指令执行完了再执行（IPC，指令级并发）
+9. synchronized 的底层实现 
     * synchronized怎么调用到操作系统的？
     * 操作系统消耗什么资源呢？
-* java 内存模型
+    * 为什么synchronized演变成重量级锁后性能会下降？
+        * 偏向锁和轻量级锁都是在用户态
+        * 重量级锁实现
+            synchronized——monitorenter/monitorexit——lock/unlock——mutex lock
+            重量级锁需要到OS的内核态，很耗性能
+10. java 内存模型
     * java 内存模型怎么保证可见性？
         * 指令重排序，happenbefore是什么
     * Java 内存屏障是什么？
     * 加锁为什么就可以保证内存屏障？
-* ReentrantLock 的底层实现 
-* synchronized 与 ReentrantLock 的区别
-* ConcurrentHashMap 和 Collections 实现的synchronizedHashMap有什么区别？
-* 怎么设置CPU最佳线程数？
+11. ReentrantLock 的底层实现 
+12. 公平锁、非公平锁，为什么非公平锁性能更高
+13. synchronized 与 ReentrantLock 的区别
+14. ConcurrentHashMap 和 Collections 实现的synchronizedHashMap有什么区别？
+15. 业务场景下的线程池的应用
+    1. 线程池的好处？异步处理每个去跨链查询请求，更快
+    2. 怎么设置最佳线程数？
+    3. 线程池有哪几种？
+    4. 多种线程池的扩展问题
+    5. ForkPoolJoin相对于线程池的优点，及底层实现
 
-线程池的典型应用场景：
 
-* 大宗商品业务场景下的线程池的应用
-    * 线程池的好处？
-* 线程池有哪几种？
-* 多种线程池的扩展问题
-* 
 
-多线程中涉及到的设计模式：
+---
 
-* 单例模式
-* 策略模式
-* 装饰器模式：CucurrentHashMap
+# 设计模式：
+
+1. 单例模式
+2. 策略模式
+3. 装饰器模式：CucurrentHashMap
+
+
+
+---
+
+
+
+# MQ
+
+1. 解释消息队列的解耦、消峰、异步的作用
+
+
+
+---
 
 # RPC
 
-为什么使用RPC？
+1. 为什么使用RPC？
+    1. 提起gRPC无视平台性
+2. 动态代理
+3. 网络传输
+    1. RPC与HTTP的区别
+4. 序列化
+5. 
 
-自己有没有一些对项目的想法
+
+
+# MySQL
+
+1. MySQL一条语句的执行过程，解析过程？查询缓存？怎么判断是否命中？ 
+2. 索引
+    1. 一个索引对应一颗B+树
+    2. 回表、索引覆盖
+    3. 最左前缀
+    4. 哪些字段适合建索引、索引缺点
+    5. B+与其他的对比
+    6. 怎么保持平衡？
+        1. 叶节点满了就往上拆
+
+
+
+
 
 # K8S
 
@@ -130,3 +328,22 @@ Spring可能会问到的问题：
 * IOC
     * 为什么交给容器会松耦合？
 * AOP
+
+
+
+---
+
+
+
+# 计算机网络
+
+
+
+---
+
+
+
+# 操作系统
+
+
+
