--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -2,7 +2,7 @@
 
 尊敬的面试官您好，我叫叶厚豪。研究生二年级就读于复旦大学计算机科学系。
 
-我的主语言是java，对java并发编程，jvm虚拟机、MySQL等技术一定的了解。
+我的主语言是java，对java并发编程，jvm虚拟机、RocketMQ、RPC等技术有一定的了解。
 
 
 
@@ -126,12 +126,64 @@
 
 
 
+---
+
+
+
 ## 3 项目问题
 
 ---
 
-1. 项目中的难点、模块
-2. 项目的数据量以及QPS能达到多少
+1. 消息队列的作用
+    1. 异步：
+        * 同步操作需要等待。一些非必要的业务逻辑可以用异步操作，节约时间。
+        * 和线程池有什么区别：线程池需要进行对线程进行管理，需要有较大的代码变动
+        * 随着项目的**请求链路越来越长**，会越来越慢。
+    2. 削峰：
+        * 让系统按照处理速度慢慢从消息队列拉取消息处理，这种短暂的消息积压是有必要的。
+    3. 解耦：
+        * 子系统之间解耦，接入新的子系统无需修改原来的代码。
+        * 传统的软件开发模式，模块之间的调用是直接调用，这样的系统很不利于系统的扩展，同时，模块之间的相互调用，数据之间的共享问题也很大，每个模块都要时时刻刻考虑其他模块会不会挂了；
+        * 使用消息队列以后，模块之间不直接调用，而是通过数据，且当某个模块挂了以后，数据仍旧会保存在消息队列中。
+2. 项目中的难点、模块
+3. 项目的数据量以及QPS能达到多少
+    1. 每秒可以处理2000 笔交易，一分钟大概12w，
+
+
+
+---
+
+# 设计模式：
+
+1. 单例模式
+    1. volatile
+2. 发布订阅模型：
+    1. Rocket MQ
+3. 策略模式
+4. 装饰器模式：CucurrentHashMap
+
+
+
+---
+
+
+
+# 分布式事务
+
+一个服务在与其他服务相关联时，怎么保证多个事务都成功
+
+## ACID
+
+- **原子性（atomicity）**：一个事务是一个不可分割的工作单位，事务中包括的操作要么都做，要么都不做。
+- **一致性（consistency）**：事务必须是使数据库从一个一致性状态变到另一个一致性状态。一致性与原子性是密切相关的。
+- **隔离性（isolation）**：一个事务的执行不能被其他事务干扰。即一个事务内部的操作及使用的数据对并发的其他事务是隔离的，并发执行的各个事务之间不能互相干扰。
+- **持久性（durability）**：**持久性也称永久性（permanence）**，指一个事务一旦提交，它对数据库中数据的改变就应该是永久性的。接下来的其他操作或故障不应该对其有任何影响。
+
+## 分布式事务
+
+
+
+
 
 
 
@@ -236,16 +288,6 @@
     3. 线程池有哪几种？
     4. 多种线程池的扩展问题
     5. ForkPoolJoin相对于线程池的优点，及底层实现
-
-
-
----
-
-# 设计模式：
-
-1. 单例模式
-2. 策略模式
-3. 装饰器模式：CucurrentHashMap
 
 
 
