就想找一个像样的工作

--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -2,7 +2,7 @@
 
 尊敬的面试官您好，我叫叶厚豪。研究生二年级就读于复旦大学计算机科学系。
 
-我的主语言是java，对java并发编程，jvm虚拟机、RocketMQ、RPC等技术有一定的了解。
+我的主语言是java，对java并发编程，jvm虚拟机、RocketMQ、RPC、区块链 等技术有一定的了解。
 
 
 
@@ -19,9 +19,9 @@
 5. 我们的任务是为数据中心设计一款缓冲日志数据并处理日志，帮助区块链系统缓冲业务高峰期产生的大量日志，再写入到区块链的消息差速器成为了一个比较重要的关键问题
 6. 考虑到消息队列的解耦合、消峰、和异步的特点，以及它可以为区块链系统带来的缓冲作用，log process区块链中间件采用了rocket mq消息队列中间件
 
+----
 
-
-项目的技术路线：
+**项目的技术路线：**
 
 1. 分布在日本的各个日立的数据中心作为消息的生产者，把消息上传到消息队列中
     1. 提及消息队列的解耦、消峰、异步的作用
@@ -31,9 +31,9 @@
 3. 最终log process通过gRPC完成对远端的区块链微服务的调用
     1. 提起gRPC无视平台性
 
----
+----
 
-自己的工作：
+**自己的工作：**
 
 1. 自己在项目组中担任的角色是使用gRPC完成调用云上区块链微服务的部分，
     1. 熟悉grpc的面试经常问道的问题
@@ -44,7 +44,7 @@
     1. 自己需要看一下一致性hash会问到的问题
     2. Merkel tree & Merkel path
 
-
+---
 
 自己在项目中的收获：
 
@@ -58,9 +58,6 @@
 
 1. 自己做为项目的开发人员，关注的重点不单单仅仅局限于技术难点，还要学会如何沟通，明确业务部分关注到的重点的需求
 2. 开发过程中需要有一个明确的接口规范，系统的前期设计工作要做好
-3. 
-
-
 
 ---
 
@@ -120,17 +117,12 @@
 
 1. 要熟悉业务需求，提前确定好技术的解决方案
 2. 开发过程中需要有一个明确的接口规范，系统的前期设计工作要做好
-3. 
-
-
 
 ---
 
 
 
 ## 3 项目问题
-
----
 
 1. 消息队列的作用
     1. 异步：
@@ -160,11 +152,7 @@
 3. 策略模式
 4. 装饰器模式：CucurrentHashMap
 
-
-
 ---
-
-
 
 # 分布式事务
 
@@ -385,3 +373,41 @@ Spring可能会问到的问题：
 
 ---
 
+# HR面试
+
+1. 介绍一下你自己？
+    1. 工作经验
+    2. 最深入研究的领域
+    3. 爱好
+2. 你对我们公司了解怎么样？
+    1. 行业 + 市场 + 产品 + 发展方向（行业报告）
+3. 你有什么优点？
+    1. 有责任心，靠谱
+    2. 沟通，明确目标
+    3. 有毅力
+    4. 不服输
+4. 你有什么缺点？
+    1. 工作：
+        1. 不接受 推卸责任、故意怠慢
+        2. 不接受 只依靠团队，自己并没有尽力去提高自己为团队做贡献
+        3. 会导致自己注重工作能力，在工作中显得自己不太和善
+    2. 思想：
+        1. 人的行动需要以生活观世界观为基础的思想体系来指导，不然会经常的犯错，现在还不能轻易的认识到自己思想上哪出是优点，哪出是缺点，还需要自己不断的反复的思考
+    3. 生活：
+        1. 生活中并没有让朋友不舒服的地方，很不愿意麻烦别人，
+5. 你最成功的事是什么？
+6. 你最失败的事是什么？
+7. 你的朋友对你的评价是什么？
+    1. 靠谱
+    2. 有毅力
+    3. 不服输
+    4. 勤沟通
+8. 你对公司加班是怎么看的？
+    1. 如果是个人效率问题，我一定会努力提高效率，在合理的时间内完成工作安排，绝不用加班来弥补自己的工作效率问题；
+    2. 如果是工作需要我会义不容辞加班，我现在单身，没有任何家庭负担，可以全身心的投入工作。但同样，我也会提高工作效率，减少不必要的加班。
+9. 你有什么职业规划嘛？
+    1. 我的目标是在工作方面超额完成，让自己在工作领域有所建树；
+    2. 在行业方面，希望自己以后能成为领域行家，根据公司脉络发展进步，能够让自己与公司共同进步，实现双赢。
+10. 您在选择工作中更看重的是什么？
+    1. 成长空间、培训机会、发挥平台
+11. 你还有什么问题要问吗？
