--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -8,7 +8,7 @@
 
 ## 1 日立
 
-在研究生一年级时曾在日本的日立公司远程实习过一段时间，主要参与的部分是开发一款log process的区块链消息的日志处理的中间件
+在研究生一年级时曾在日本的日立公司远程实习过一段时间，主要参与的部分是log process的区块链消息处理的中间件
 
 日立项目的整个背景是
 
@@ -16,12 +16,12 @@
 2. 但与此同时，来自数据中心和分布在边缘端的服务节点会产生大量的系统日志，需要同步到区块链中
 3. 即日志的提供方、以及日志的处理方，他们的生成数据和存储数据的速度不匹配，存在一个差值
 4. 因此如何成功的缓解短期内，业务高峰期大量的日志到达系统时，对系统造成的过载的压力，是需要亟需解决的问题
-5. 我们的任务是为数据中心设计一款缓冲日志数据并处理日志，帮助区块链系统缓冲业务高峰期产生的大量日志，再写入到区块链的消息差速器成为了一个比较重要的关键问题
+5. 我们的任务是为数据中心设计一款缓冲日志数据并处理日志，帮助区块链系统缓冲业务高峰期产生的大量日志，再写入到区块链
 6. 考虑到消息队列的解耦合、消峰、和异步的特点，以及它可以为区块链系统带来的缓冲作用，log process区块链中间件采用了rocket mq消息队列中间件
 
 ----
 
-**项目的技术路线：**
+### **项目的技术路线：**
 
 1. 分布在日本的各个日立的数据中心作为消息的生产者，把消息上传到消息队列中
     1. 提及消息队列的解耦、消峰、异步的作用
@@ -30,23 +30,25 @@
     2. 定时提交任务
 3. 最终log process通过gRPC完成对远端的区块链微服务的调用
     1. 提起gRPC无视平台性
+    2. 提起RPC设计相关的技术难点
 
 ----
 
-**自己的工作：**
+### **技术难点：**
 
 1. 自己在项目组中担任的角色是使用gRPC完成调用云上区块链微服务的部分，
     1. 熟悉grpc的面试经常问道的问题
     2. 动态代理
     3. 网络传输
     4. 序列化
-2. 同时，完成对区块链系统内的内部源码的优化，压缩日志的存储大小，开发出区块链系统轻结点部件，将系统日志成功的压缩到了原来的20%的大小
-    1. 自己需要看一下一致性hash会问到的问题
-    2. Merkel tree & Merkel path
+    5. 反射
+    6. 负载均衡
+2. 如何保证消息队列的高可用
+    1. 
 
 ---
 
-自己在项目中的收获：
+### 收获：
 
 1. 自己在开发项目中熟悉了两个中间件的使用和系统设计
 2. 自己在项目中学会了Java 多线程部分的知识，自己开始体会到并发系统带来的系统优势和性能的提升
@@ -63,7 +65,47 @@
 
 
 
-## 2 大宗
+## 2 数字供应链
+
+今年7 8 月份在阿里巴巴数字供应链部门实习，主要面向供应链中台进行开发。供应链中台是面向阿里集团新零售行业的统一的供应链平台，涉及到多个行业，如天猫超市、阿里C2M、天猫国际、考拉直营、Lazada等行业，对基础商品提供进货、销售、存储的供应链协同服务。
+
+
+
+**自己所在的项目组主要负责：计划单生命周期的管理模块。**
+
+1. 什么是计划单？
+2. 计划单的生命周期？创建+修改+提交+审核+下发
+3. 怎么提高计划单的产出性能？mapreduce
+4. 
+
+**自己实习期间负责的主要模块有两点：**
+
+1. 供应链中台的流程编排：面对不同行业，每个平台都有自己定义的单据处理流程
+    1. BizChain：添加全部的Handler，内部通过元数据配置，决定执行不执行handler
+    2. 能力外化：能力模型标准化之后，能力外化平台扫描系统中的handler，外化平台决定handler的执行顺序
+    3. 静态Pipeline - 通过静态文件的方式配置哪些行业按照什么顺序执行handler，类似于mybatis的xml文件
+2. 计划单产出失败了怎么补偿？定时任务失败重试
+    1. 线程池多线程重试
+        1. 线程池的原理：
+        2. 锁：统计执行成功或失败的共享变量
+
+
+
+### 技术难点：
+
+1. jvm fullgc
+2. 并发锁-设计
+3. mapreduce
+
+
+
+
+
+
+
+---
+
+## 3 大宗
 
 自己在研究生二年级参与到了实验室重点项目的研发中，参与的是国家科技部纵向项目《大宗商品市场的监管与规范》
 
@@ -294,6 +336,8 @@
 5. 
 
 
+
+----
 
 # MySQL
 
