--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -1,10 +1,62 @@
 # 0 自我介绍
 
-尊敬的面试官您好，我叫叶厚豪。研究生二年级就读于复旦大学计算机科学系。
+尊敬的面试官您好，我叫叶厚豪。研究生就读于复旦大学计算机科学系。
 
-我的主语言是java，对java并发编程，jvm虚拟机、RocketMQ、RPC、区块链 等技术有一定的了解。
+我的主语言是java，对java、RPC、区块链 等技术有一定的了解。
+
+Hello, dear interviewer, my name is Ye Houhao. Postgraduate studies at Fudan University, majoring in Computer Science.During my time at school, my grades were always excellent, and I have won many scholarships.
+
+My main language is java, and I have a certain understanding of RPC, blockchain, distributed system and other technologies.
+
+When I was in the first year of postgraduate, I did a remote internship at Hitachi in Japan. The main part involved during the internship is the blockchain message processing middlewar.My task is to design middleware for buffering logs for the datacenter, helping the blockchain system to buffer a large number of logs generated during the peak business period, and then write it to the blockchain。
+
+In July and August of the second year, I took an internship in Alibaba's digital supply chain department, mainly for development in the middle stage of the supply chain. The middle stage is a unified supply chain platform for the new retail industry of Alibaba Group, involving multiple industries, such as Tmall, C2M, Koala, Lazada and other industries, providing Supply chain services of collaboration, sales, and storage.
+
+About my personality, I am very outgoing. I like sports very much, and like to communicate with other people.
+
+that's all, thank you
 
 
+
+
+
+区块链介绍
+
+At the heart of a blockchain network is a same distributed ledger that records all the transactions that take place on the network.
+
+A blockchain ledger is often described as **decentralized** because it is replicated across many network participants, each of whom **collaborate** in its maintenance. We’ll see that decentralization and collaboration are powerful attributes that mirror the way businesses exchange goods and services in the real world.
+
+In addition to being decentralized and collaborative, the information recorded to a blockchain is append-only, using cryptographic techniques that guarantee that once a transaction has been added to the ledger it cannot be modified. This property of “immutability” makes it simple to determine the provenance of information, because participants can be sure information has not been changed after the fact. It’s why blockchains are sometimes described as **systems of proof**.
+
+The process of keeping the ledger transactions synchronized across the network — to ensure that ledgers update only when transactions are approved by the appropriate participants, and that when ledgers do update, they update with the same transactions in the same order — is called **consensus**.
+
+
+
+---
+
+为什么加入摩根
+
+The first one is that I am very interested in finance and want to know more financial knowledge,such as how to manage finances, how the securities market works, etc.
+
+Morgan Stanley is a leading financial company in the world. I believe joining Morgan is very good  choice for learning financial knowledge. 
+
+Furthermore, I prefer the free and diversified working environment of foreign companies. In morgan, maybe pay more attention on the work-life balance, instead of working overtime.
+
+---
+
+团队冲突怎么处理？
+
+First communicate with them separately to find out the reasons for the conflict. If it is a normal conflict for team building, wait for them to calm down before communicating. If it is because there is too little communication, then it is recommended that they communicate more often, and maybe they can organize some team building activities, etc.
+
+Communicate more and find a solution that is as reasonable as possible
+
+First understand the technical level level of the members of the group, and then arrange suitable work according to the technical level.
+
+
+
+
+
+---
 
 ## 1 日立
 
@@ -455,3 +507,10 @@ Spring可能会问到的问题：
 10. 您在选择工作中更看重的是什么？
     1. 成长空间、培训机会、发挥平台
 11. 你还有什么问题要问吗？
+
+
+
+----
+
+# 
+
