--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -18,7 +18,38 @@ that's all, thank you
 
 
 
+---
 
+日立
+
+I had a remote internship at Hitachi in Japan when I was in the first year of graduate student. The main part involved was the middleware of blockchain message.
+
+The whole background of the Hitachi project is
+
+1. Since the blockchain is a distributed and decentralized database file system, its messages need to be in a decentralized distributed environment. Multiple blockchain nodes have consistency in the sequence of messages entering the chain, leading to a long period for synchronizing messages and verifying the legitimacy of messages, and the throughput of the system is particularly low
+2. But at the same time, service nodes from the data center and distributed on the edge will generate a large amount of system logs, which need to be synchronized to the blockchain
+3. That is, the provider of the log and the processor of the log, their speed of generating data and storing data does not match, there is a difference
+4. Therefore, how to successfully alleviate the overload pressure on the system, when a large number of logs arrive at the system during peak business periods in the short term is a problem
+5. My task is to design a buffer log data for the data center and process the logs, to help the blockchain system buffer a large number of logs generated during peak business periods, and then write them to the blockchain
+6. In account of the decoupling, peak elimination, and asynchronous characteristics of the message queue, as well as the buffering effect it can bring to the blockchain system, the log process blockchain middleware uses the rocket mq message queue middleware
+
+---
+
+供应链
+
+1. Do monitoring jobs at the statement of order processing，then collect them into the database.
+2. Use thread pool to compensate failed tasks in Middle Stage
+    1. a thread pool maintains multiple threads waiting for tasks to be allocated for concurrent execution by the supervising program. 
+    2. By maintaining a pool of threads, the model increases performance and avoids latency in execution due to frequent creation and destruction of threads for short-lived tasks.
+3. Use mapreduce technology to process orders concurrently
+    1. The MapReduce framework is composed of three operations (or steps):
+        1. **Map:** each worker node applies the `map` function to the orders. Split the orders according to the goods id or warehouse id.
+        2. **Shuffle:** worker nodes redistribute data based on the warehouse id, Group the same id into one category
+        3. **Reduce:** worker nodes now process each group of orders in parallel，then merge them into one order.
+
+
+
+---
 
 区块链介绍
 
@@ -41,6 +72,13 @@ The first one is that I am very interested in finance and want to know more fina
 Morgan Stanley is a leading financial company in the world. I believe joining Morgan is very good  choice for learning financial knowledge. 
 
 Furthermore, I prefer the free and diversified working environment of foreign companies. In morgan, maybe pay more attention on the work-life balance, instead of working overtime.
+
+---
+
+为什么选择PayPal？
+
+1. PayPal is a value-driven organisation driven by its core values of collaboration, innovation, wellness.
+2. PayPal is growing rapidly, The accounts are supported by teammates all over the world. Working with the world’s top engineers will give me a chance to learn advanced  knowledge
 
 ---
 
@@ -138,8 +176,8 @@ First understand the technical level level of the members of the group, and then
     3. 静态Pipeline - 通过静态文件的方式配置哪些行业按照什么顺序执行handler，类似于mybatis的xml文件
 2. 计划单产出失败了怎么补偿？定时任务失败重试
     1. 线程池多线程重试
-        1. 线程池的原理：
         2. 锁：统计执行成功或失败的共享变量
+    2. MapReduce 补偿
 
 
 
